<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="radioButton_option1">Glide - Image Loading Library by BumpTech</string>
    <string name="radioButton_option2">LoadApp - Current repository by Udacity</string>
    <string name="radioButton_option3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_to_email">Button to Email</string>
    <string name="cloud_download_icon">Cloud download icon</string>
    <string name="back">BACK</string>
    <string name="details">Details</string>
    <string name="download_symbol">Download symbol</string>
    <string name="repo_preview">Repository preview</string>
    <string name="repository_downloaded">Repository downloaded:</string>
</resources>
